# degital_twin

drone/: README.md
drone/ros2_ws/src/drone_control/: package.xml  setup.py
drone/ros2_ws/src/drone_control/drone_control/: keyboard_teleop.py  pose_bridge.py  position_controller.py
drone/ros2_ws/src/drone_control/launch/: bringup.launch.py  bringup_real.launch.py  tello_real.launch.py
drone/ros2_ws/src/drone_control/rviz/: tello.rviz
drone/sim/: convert_tello_urdf.py  tello_sim.py
drone/sim/archive/: run_drone_teleop.py  step1_hover.py  step2_keyboard_velocity.py  step3_ros2_cmdvel.py  step4_pose_publish.py
drone/tools/: tello_set_station.py
drone/usd/env/: drone_arena.usd
drone/usd/robots/: tello.urdf  tello.usd
drone/usd/robots/configuration/: tello_base.usd  tello_physics.usd  tello_sensor.usd
